namespace StudentParliamentSystem.Core.Aggregates.CoworkingBooking;

public class CoworkingBookingStatus
{
    public Guid Id { get; init; }
    public string Name { get; set; }
}