// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using StudentParliamentSystem.Infrastructure.Data;

#nullable disable

namespace StudentParliamentSystem.Infrastructure.Data.Migrations
{
    [DbContext(typeof(ApplicationDatabaseContext))]
    [Migration("20260404152037_AddEmailPropertyToUserEntity")]
    partial class AddEmailPropertyToUserEntity
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasDefaultSchema("main_application")
                .HasAnnotation("ProductVersion", "10.0.4")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("EventEventTag", b =>
                {
                    b.Property<Guid>("EventsId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("TagsId")
                        .HasColumnType("uuid");

                    b.HasKey("EventsId", "TagsId");

                    b.HasIndex("TagsId");

                    b.ToTable("events_tags", "main_application");
                });

            modelBuilder.Entity("RoleUser", b =>
                {
                    b.Property<Guid>("RolesId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("UsersId")
                        .HasColumnType("uuid");

                    b.HasKey("RolesId", "UsersId");

                    b.HasIndex("UsersId");

                    b.ToTable("users_roles", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.CoworkingBooking.CoworkingBooking", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTime>("EndTimeUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("EventId")
                        .HasColumnType("uuid");

                    b.Property<string>("Notes")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<Guid?>("SpaceManagerId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("StartTimeUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("StatusId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("EventId");

                    b.HasIndex("SpaceManagerId");

                    b.HasIndex("StatusId");

                    b.ToTable("coworking_bookings", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.CoworkingBooking.CoworkingBookingStatus", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("Id");

                    b.ToTable("coworking_statuses", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Department.Department", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(4000)
                        .HasColumnType("character varying(4000)");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("Id");

                    b.ToTable("departments", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Department.DepartmentMember", b =>
                {
                    b.Property<Guid>("DepartmentId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("DepartmentRoleId")
                        .HasColumnType("uuid");

                    b.HasKey("DepartmentId", "UserId");

                    b.HasAlternateKey("UserId", "DepartmentId");

                    b.ToTable("department_members", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.Event", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("CreatedByUserId")
                        .HasColumnType("uuid");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasMaxLength(4000)
                        .HasColumnType("character varying(4000)");

                    b.Property<bool>("IsPublished")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(false);

                    b.Property<string>("Location")
                        .IsRequired()
                        .HasMaxLength(255)
                        .HasColumnType("character varying(255)");

                    b.Property<int?>("MaxParticipants")
                        .HasColumnType("integer");

                    b.Property<string>("PosterUrl")
                        .HasMaxLength(500)
                        .HasColumnType("character varying(500)");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)");

                    b.HasKey("Id");

                    b.HasIndex("CreatedByUserId");

                    b.ToTable("events", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.EventOrganizer", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("EventId")
                        .HasColumnType("uuid");

                    b.Property<string>("RoleDescription")
                        .HasMaxLength(1000)
                        .HasColumnType("character varying(1000)");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.HasIndex("EventId", "UserId")
                        .IsUnique();

                    b.ToTable("event_organizers", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.EventRegistration", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<Guid>("EventId")
                        .HasColumnType("uuid");

                    b.Property<DateTime>("RegisteredAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.HasIndex("EventId", "UserId")
                        .IsUnique();

                    b.ToTable("event_registrations", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.EventTag", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("Id");

                    b.ToTable("event_tags", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.OrganizationRequest.OrganizationRequest", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTime>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<Guid>("EventId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("StatusId")
                        .HasColumnType("uuid");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid");

                    b.HasKey("Id");

                    b.HasIndex("StatusId");

                    b.HasIndex("UserId");

                    b.HasIndex("EventId", "UserId")
                        .IsUnique();

                    b.ToTable("organization_requests", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.OrganizationRequest.OrganizationRequestStatus", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("Id");

                    b.ToTable("organization_request_statuses", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Role.Role", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)");

                    b.HasKey("Id");

                    b.ToTable("roles", "main_application");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.User.User", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("uuid");

                    b.Property<DateTimeOffset>("CreatedAtUtc")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("FirstName")
                        .IsRequired()
                        .HasMaxLength(35)
                        .HasColumnType("character varying(35)");

                    b.Property<string>("LastName")
                        .IsRequired()
                        .HasMaxLength(35)
                        .HasColumnType("character varying(35)");

                    b.HasKey("Id");

                    b.ToTable("users", "main_application");
                });

            modelBuilder.Entity("EventEventTag", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Event.Event", null)
                        .WithMany()
                        .HasForeignKey("EventsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Event.EventTag", null)
                        .WithMany()
                        .HasForeignKey("TagsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("RoleUser", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Role.Role", null)
                        .WithMany()
                        .HasForeignKey("RolesId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", null)
                        .WithMany()
                        .HasForeignKey("UsersId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.CoworkingBooking.CoworkingBooking", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Event.Event", "Event")
                        .WithMany()
                        .HasForeignKey("EventId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", "SpaceManager")
                        .WithMany()
                        .HasForeignKey("SpaceManagerId");

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.CoworkingBooking.CoworkingBookingStatus", "Status")
                        .WithMany()
                        .HasForeignKey("StatusId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Event");

                    b.Navigation("SpaceManager");

                    b.Navigation("Status");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Department.DepartmentMember", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Department.Department", "Department")
                        .WithMany("DepartmentMembers")
                        .HasForeignKey("DepartmentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", "User")
                        .WithMany("DepartmentMembers")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Department");

                    b.Navigation("User");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.Event", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", "CreatedByUser")
                        .WithMany("CreatedEvents")
                        .HasForeignKey("CreatedByUserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CreatedByUser");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.EventOrganizer", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Event.Event", "Event")
                        .WithMany("EventOrganizers")
                        .HasForeignKey("EventId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Event");

                    b.Navigation("User");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.EventRegistration", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Event.Event", "Event")
                        .WithMany("Registrations")
                        .HasForeignKey("EventId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", "User")
                        .WithMany("EventRegistrations")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Event");

                    b.Navigation("User");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.OrganizationRequest.OrganizationRequest", b =>
                {
                    b.HasOne("StudentParliamentSystem.Core.Aggregates.Event.Event", "Event")
                        .WithMany("OrganizationRequests")
                        .HasForeignKey("EventId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.OrganizationRequest.OrganizationRequestStatus", "Status")
                        .WithMany("OrganizationRequests")
                        .HasForeignKey("StatusId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("StudentParliamentSystem.Core.Aggregates.User.User", "User")
                        .WithMany("OrganizationRequests")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Event");

                    b.Navigation("Status");

                    b.Navigation("User");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Department.Department", b =>
                {
                    b.Navigation("DepartmentMembers");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.Event.Event", b =>
                {
                    b.Navigation("EventOrganizers");

                    b.Navigation("OrganizationRequests");

                    b.Navigation("Registrations");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.OrganizationRequest.OrganizationRequestStatus", b =>
                {
                    b.Navigation("OrganizationRequests");
                });

            modelBuilder.Entity("StudentParliamentSystem.Core.Aggregates.User.User", b =>
                {
                    b.Navigation("CreatedEvents");

                    b.Navigation("DepartmentMembers");

                    b.Navigation("EventRegistrations");

                    b.Navigation("OrganizationRequests");
                });
#pragma warning restore 612, 618
        }
    }
}
