@startuml Student_Parliament_ERD
title ER Diagram: SPF Event & Coworking System
hide circle
skinparam linetype ortho

skinparam class {
    BackgroundColor White
    ArrowColor #2C3E50
    BorderColor #2C3E50
}

entity "User" as user {
  *id : UUID <<PK>>
  --
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  email : VARCHAR(100)
  created_at : TIMESTAMP
}

entity "Role" as role {
  *id : UUID <<PK>>
  --
  name : VARCHAR(50)
}

entity "user_roles" as user_role <<join>> {
  *user_id : UUID <<FK>>
  *role_id : UUID <<FK>>
}

entity "Department" as department {
  *id : UUID <<PK>>
  --
  name : VARCHAR(50)
}

entity "user_departments" as user_dept <<join>> {
  *user_id : UUID <<FK>>
  *department_id : UUID <<FK>>
}

entity "Event" as event {
  *id : UUID <<PK>>
  --
  title : VARCHAR(200)
  description : TEXT
  location : VARCHAR(255)
  max_participants : INT
  is_published : BOOLEAN
  start_time : TIMESTAMP
  end_time : TIMESTAMP
  *created_by_user_id : UUID <<FK>>
  *department_id : UUID <<FK>>
  created_at : TIMESTAMP
}

entity "EventTag" as tag {
  *id : UUID <<PK>>
  --
  name : VARCHAR(50)
}

entity "event_tags" as event_tag_map <<join>> {
  *event_id : UUID <<FK>>
  *tag_id : UUID <<FK>>
}

entity "EventRegistration" as registration {
  *id : UUID <<PK>>
  --
  *user_id : UUID <<FK>>
  *event_id : UUID <<FK>>
  registered_at : TIMESTAMP
}

entity "EventOrganizer" as organizer {
  *id : UUID <<PK>>
  --
  *event_id : UUID <<FK>>
  *user_id : UUID <<FK>>
  role_description : VARCHAR(100)
}

entity "OrgRequestStatus" as org_status {
  *id : UUID <<PK>>
  --
  name : VARCHAR(50)
}

entity "OrganizationRequest" as org_request {
  *id : UUID <<PK>>
  --
  *user_id : UUID <<FK>>
  *event_id : UUID <<FK>>
  *status_id : UUID <<FK>>
  created_at : TIMESTAMP
}

entity "CoworkingBookingStatus" as booking_status {
  *id : UUID <<PK>>
  --
  name : VARCHAR(50)
}

entity "CoworkingBooking" as booking {
  *id : UUID <<PK>>
  --
  *event_id : UUID <<FK>>
  *status_id : UUID <<FK>>
  space_manager_id : UUID <<FK, nullable>>
  start_time : TIMESTAMP
  end_time : TIMESTAMP
  notes : TEXT
}

' --- RELATIONSHIPS ---

user ||..o{ user_role
role ||..o{ user_role

user ||..o{ user_dept
department ||..o{ user_dept

user ||..o{ event : "creates"
department ||..o{ event : "owns"

event ||..o{ event_tag_map
tag ||..o{ event_tag_map

user ||..o{ registration
event ||..o{ registration

user ||..o{ organizer
event ||..o{ organizer

user ||..o{ org_request : "requests to join"
event ||..o{ org_request
org_status ||..o{ org_request

event ||..o| booking : "has booking"
booking_status ||..o{ booking
user |o..o{ booking : "space manager"

@enduml